--- a/docs/changelog.mdx
+++ b/docs/changelog.mdx
@@ -5,6 +5,11 @@ route: /changelog
 
 # Changelog
 
+### 2.1.0
+
+- Added the ability to copy paste, as well as the ability to hook into those events
+- Fixed a bug where rotation wasn't being preserved on the polygon and image default canvas items
+
 #### 2.0.1
 
 - Fixed a bug where `rotatePolygon` was rotating the points geometrically and then adjusting the rotation value so there was no change in actual rotation of the shape
