--- a/docs/changelog.mdx
+++ b/docs/changelog.mdx
@@ -5,6 +5,10 @@ route: /changelog
 
 # Changelog
 
+#### 2.1.1
+
+- Changed `translationOnPaste` to a more sensible default (15, 15) -> (0, 0)
+
 ### 2.1.0
 
 - Added the ability to copy paste, as well as the ability to hook into those events
