--- a/docs/changelog.mdx
+++ b/docs/changelog.mdx
@@ -5,6 +5,11 @@ route: /changelog
 
 # Changelog
 
+### 2.2.0
+
+- Added the ability to lock canvas items
+- Added support for canvas item metadata, data about canvas items that canvas items do not own to more easily support global canvas item operations (locking in this instance, but possibly hiding and layering in the future)
+
 #### 2.1.1
 
 - Changed `translationOnPaste` to a more sensible default (15, 15) -> (0, 0)
