--- a/docs/changelog.mdx
+++ b/docs/changelog.mdx
@@ -5,6 +5,11 @@ route: /changelog
 
 # Changelog
 
+### 2.3.0
+
+- Added the ability to rearrange the canvas
+- Fixed bug where copying items would copy them in the order they were selected
+
 ### 2.2.0
 
 - Added the ability to lock canvas items
