Fix zoom scrolling for mouse

--- a/docs/changelog.mdx
+++ b/docs/changelog.mdx
@@ -8,6 +8,7 @@ route: /changelog
 ### 2.4.0
 
 - Added the ability to undo rearrange and lock/unlock operations
+- Improved zoom scrolling on the canvas to make it smoother
 
 ### 2.3.0
 
