Respect fill image url in polygon canvas items

--- a/docs/changelog.mdx
+++ b/docs/changelog.mdx
@@ -5,6 +5,10 @@ route: /changelog
 
 # Changelog
 
+#### 2.4.1
+
+- Respect fill image url in polygon canvas items
+
 ### 2.4.0
 
 - Added the ability to undo rearrange and lock/unlock operations
